# DZ4

./: CMakeLists.txt  IStatistics.h  Max.cpp  Max.h  Mean.cpp  Mean.h  Min.cpp  Min.h  Std.cpp  Std.h  clear_data.cpp  main.cpp  read_data.cpp  variables.h  write_data.cpp
